agrego module marta

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Miembros del equipo</h1>
     <ol></ol>
-    <script src="/miembro2.js"></script>
+    <script type="module" src="/miembro2.js"></script>
 </body>
 </html>
