--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Miembros del equipo</h1>
     <ol></ol>
-<script src="miembro1.js"></script>
+<script type="module" src="miembro1.js"></script>
 </body>
 </html>
